--- a/quarto-report/notebook.qmd
+++ b/quarto-report/notebook.qmd
@@ -14,6 +14,7 @@ ggplot2::theme_set(ggplot2::theme_minimal())
 ```
 
 This is a report of penguins studied by Dr Kristen Gorman in Antarctica.
+Adapted from <https://allisonhorst.github.io/palmerpenguins/articles/examples.html>.
 
 ```{r mass_vs_flipper}
 mass_flipper <- ggplot(data = penguins, 
@@ -37,5 +38,3 @@ mass_flipper <- ggplot(data = penguins,
 
 mass_flipper
 ```
-
-See <https://allisonhorst.github.io/palmerpenguins/articles/examples.html>
